# GitaView

./: .gitattributes  .gitignore  AGENTS.md  CODE_REVIEW_REPORT.md  DESIGN_AND_BUILD_SPEC.md  LICENSE  NATIVE_WIDGET_IMPLEMENTATION_PLAN.md  PRODUCT.md  PROJECT_REVIEW_REPORT_2026-05-12.md  README.md  create-icon.cjs  index.html  package-lock.json  package.json
.playwright-cli/: page-2026-05-12T14-08-33-556Z.yml  page-2026-05-12T14-08-54-518Z.yml  page-2026-05-12T14-09-11-341Z.yml
.sisyphus/: ralph-loop.local.md
docs/: CLAUDE_FIX_GUIDE.md  CLAUDE_REVIEW_REPORT_2.md  RELEASE_SIGNING.md  native-desktop-widget-layer-plan.md  platform-acceptance-checklist.md
src/: App.tsx  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_commands.rs  app_settings.rs  diagnostics.rs  lib.rs  main.rs  repo_operation.rs  repo_registry.rs  repo_status.rs  system_open.rs  tray_menu_rows.rs  tray_status.rs  widget_data.rs
src-tauri/src/desktop_widget/: macos.rs  mod.rs  unsupported.rs  windows.rs
src-tauri/src/domain/: repo.rs  settings.rs  status.rs
src-tauri/src/git/: commands.rs  discovery.rs  remote.rs  status_text.rs
src-tauri/src/storage/: store.rs
src-tauri/widget-bridge/: WidgetReloader.m
src-tauri/widget-extension/: project.yml
src-tauri/widget-extension/GitaViewWidget/: GitaViewWidget.swift  Info.plist  Provider.swift
src-tauri/widget-extension/GitaViewWidget/Models/: WidgetData.swift
src-tauri/widget-extension/GitaViewWidget/Views/: LargeWidgetView.swift  MediumWidgetView.swift  SmallWidgetView.swift
(+101 files in other folders)
