[package]
name = "gitaview"
version = "0.1.0"
edition = "2021"

[dependencies]
dunce = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "gitaview_lib"
path = "src/lib.rs"
