[package]
name = "gitaview"
version = "0.1.0"
edition = "2021"

[dependencies]
dunce = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "gitaview_lib"
path = "src/lib.rs"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-core-graphics = "0.3"
